--- a/Develop/client/src/css/style.css
+++ b/Develop/client/src/css/style.css
@@ -1,10 +1,10 @@
 /* app shell CSS */
 :root {
-  --primary: #31a9e1;
-  --gray: #ececec;
-  --whitesmoke: #f5f5f5;
-  --dark: #222;
-  --monoaki: #272822;
+  --primary: #0A090C;
+  --grayseagreen: #7BAE7F;
+  --whiteblue: #08A4BD;
+  --darkgreen: #00635D;
+  --monoaki: #004BA8;
   --navbar-height: 50px;
 }
 
