--- a/client/src/css/style.css
+++ b/client/src/css/style.css
@@ -1,10 +1,10 @@
 /* app shell CSS */
 :root {
-  --primary: #0A090C;
+  --primary: #004BA8;
   --grayseagreen: #7BAE7F;
   --whiteblue: #08A4BD;
   --darkgreen: #00635D;
-  --monoaki: #004BA8;
+  --monoaki: #0A090C;
   --navbar-height: 50px;
 }
 
